/**
 * Input Component Tests
 */

import React from 'react';
import { fireEvent } from '@testing-library/react-native';
import { render } from '../../../__tests__/testUtils';
import { Input } from '../../../components/ui/Input';

describe('Input Component', () => {
  describe('Rendering', () => {
    it('renders with label', () => {
      const { getByText } = render(
        <Input label="Email" />
      );
      expect(getByText('Email')).toBeTruthy();
    });

    it('renders with placeholder', () => {
      const { getByPlaceholderText } = render(
        <Input placeholder="Enter email" />
      );
      expect(getByPlaceholderText('Enter email')).toBeTruthy();
    });

    it('renders with error message', () => {
      const { getByText } = render(
        <Input label="Password" error="Password is required" />
      );
      expect(getByText('Password is required')).toBeTruthy();
    });

    it('renders with hint message', () => {
      const { getByText } = render(
        <Input label="Username" hint="Must be unique" />
      );
      expect(getByText('Must be unique')).toBeTruthy();
    });

    it('shows required asterisk when required', () => {
      const { getByText } = render(
        <Input label="Email" required />
      );
      expect(getByText(/Email/)).toBeTruthy();
      expect(getByText('*')).toBeTruthy();
    });
  });

  describe('Text Input', () => {
    it('accepts text input', () => {
      const { getByPlaceholderText } = render(
        <Input placeholder="Type here" />
      );
      
      const input = getByPlaceholderText('Type here');
      fireEvent.changeText(input, 'Hello World');
      
      expect(input.props.value).toBe('Hello World');
    });

    it('calls onChangeText handler', () => {
      const onChangeText = jest.fn();
      const { getByPlaceholderText } = render(
        <Input placeholder="Type" onChangeText={onChangeText} />
      );
      
      fireEvent.changeText(getByPlaceholderText('Type'), 'Test');
      expect(onChangeText).toHaveBeenCalledWith('Test');
    });

    it('handles focus event', () => {
      const onFocus = jest.fn();
      const { getByPlaceholderText } = render(
        <Input placeholder="Focus me" onFocus={onFocus} />
      );
      
      fireEvent(getByPlaceholderText('Focus me'), 'focus');
      expect(onFocus).toHaveBeenCalled();
    });

    it('handles blur event', () => {
      const onBlur = jest.fn();
      const { getByPlaceholderText } = render(
        <Input placeholder="Blur me" onBlur={onBlur} />
      );
      
      fireEvent(getByPlaceholderText('Blur me'), 'blur');
      expect(onBlur).toHaveBeenCalled();
    });
  });

  describe('Secure Text Entry', () => {
    it('renders as password field', () => {
      const { getByPlaceholderText } = render(
        <Input placeholder="Password" secureTextEntry />
      );
      
      const input = getByPlaceholderText('Password');
      expect(input.props.secureTextEntry).toBe(true);
    });

    it('toggles password visibility', () => {
      const { getByPlaceholderText, getByTestId } = render(
        <Input placeholder="Password" secureTextEntry />
      );
      
      const input = getByPlaceholderText('Password');
      expect(input.props.secureTextEntry).toBe(true);
      
      // Toggle visibility (implementation depends on component)
      // If there's a toggle button, test it
    });
  });

  describe('Icons', () => {
    it('renders left icon', () => {
      const { getByTestId } = render(
        <Input placeholder="Search" leftIcon="magnify" />
      );
      // Icon rendering depends on implementation
    });

    it('renders right icon', () => {
      const { getByTestId } = render(
        <Input placeholder="Clear" rightIcon="close" />
      );
      // Icon rendering depends on implementation
    });

    it('calls onRightIconPress when right icon is pressed', () => {
      const onPress = jest.fn();
      const { getByTestId } = render(
        <Input 
          placeholder="Clear" 
          rightIcon="close"
          onRightIconPress={onPress}
        />
      );
      
      // Test icon press if accessible
    });
  });

  describe('Validation States', () => {
    it('shows error state', () => {
      const { getByText } = render(
        <Input 
          label="Email" 
          value="invalid-email"
          error="Invalid email format"
        />
      );
      expect(getByText('Invalid email format')).toBeTruthy();
    });

    it('shows success state', () => {
      const { getByTestId } = render(
        <Input 
          label="Email" 
          value="valid@email.com"
          showSuccess
        />
      );
      // Check for success indicator if implemented
    });

    it('prioritizes error over hint', () => {
      const { getByText, queryByText } = render(
        <Input 
          label="Field" 
          error="Error message"
          hint="Hint message"
        />
      );
      expect(getByText('Error message')).toBeTruthy();
      expect(queryByText('Hint message')).toBeNull();
    });
  });

  describe('Keyboard Types', () => {
    it('accepts email keyboard type', () => {
      const { getByPlaceholderText } = render(
        <Input placeholder="Email" keyboardType="email-address" />
      );
      const input = getByPlaceholderText('Email');
      expect(input.props.keyboardType).toBe('email-address');
    });

    it('accepts numeric keyboard type', () => {
      const { getByPlaceholderText } = render(
        <Input placeholder="Phone" keyboardType="numeric" />
      );
      const input = getByPlaceholderText('Phone');
      expect(input.props.keyboardType).toBe('numeric');
    });
  });

  describe('Disabled State', () => {
    it('disables input when editable is false', () => {
      const { getByPlaceholderText } = render(
        <Input placeholder="Disabled" editable={false} />
      );
      const input = getByPlaceholderText('Disabled');
      expect(input.props.editable).toBe(false);
    });

    it('does not accept input when disabled', () => {
      const onChangeText = jest.fn();
      const { getByPlaceholderText } = render(
        <Input 
          placeholder="Disabled" 
          editable={false}
          onChangeText={onChangeText}
        />
      );
      
      fireEvent.changeText(getByPlaceholderText('Disabled'), 'Test');
      // Behavior may vary - component might prevent changes
    });
  });

  describe('Custom Styles', () => {
    it('applies custom container style', () => {
      const customStyle = { marginTop: 20 };
      const { getByTestId } = render(
        <Input 
          placeholder="Styled"
          containerStyle={customStyle}
          testID="input-container"
        />
      );
      // Style testing depends on implementation
    });
  });

  describe('Accessibility', () => {
    it('has accessible label', () => {
      const { getByLabelText } = render(
        <Input 
          label="Email Address"
          accessibilityLabel="Email input field"
        />
      );
      expect(getByLabelText('Email input field')).toBeTruthy();
    });

    it('announces error to screen readers', () => {
      const { getByText } = render(
        <Input 
          label="Password"
          error="Password is required"
        />
      );
      const error = getByText('Password is required');
      expect(error).toBeTruthy();
      // Accessibility props should be set for screen readers
    });
  });

  describe('Multiline', () => {
    it('renders multiline text area', () => {
      const { getByPlaceholderText } = render(
        <Input 
          placeholder="Description"
          multiline
          numberOfLines={4}
        />
      );
      const input = getByPlaceholderText('Description');
      expect(input.props.multiline).toBe(true);
      expect(input.props.numberOfLines).toBe(4);
    });
  });

  describe('Snapshots', () => {
    it('matches snapshot for basic input', () => {
      const { toJSON } = render(
        <Input label="Email" placeholder="Enter email" />
      );
      expect(toJSON()).toMatchSnapshot();
    });

    it('matches snapshot with error', () => {
      const { toJSON } = render(
        <Input label="Password" error="Too short" />
      );
      expect(toJSON()).toMatchSnapshot();
    });

    it('matches snapshot with icons', () => {
      const { toJSON } = render(
        <Input 
          label="Search" 
          leftIcon="magnify"
          rightIcon="close"
        />
      );
      expect(toJSON()).toMatchSnapshot();
    });
  });
});
